Fix wrapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ h1{
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+    margin-left: 0;
   }
     .card-container figure a{
       text-decoration: none;
@@ -47,11 +48,6 @@ h1{
       margin-top: 7px;
       border-radius: 7px;
 }  
-
-/* TODO: Fix wrapping issue */
-.last{
-
-}
 
 @media screen and (min-width: 1050px) {
   .card-container{
